# big-voto

./: .gitignore  Dockerfile  README.md  docker-compose.yaml
big_voto/: Dockerfile  pyproject.toml
bigvoto/: .envExemple  Dockerfile  alembic.ini  pyproject.toml
bigvoto/app/: main.py  routes.py
bigvoto/app/alembic/: env.py
bigvoto/app/alembic/versions/: 041342843854_user_model.py  24a5c57b3725_.py  4b4f05424129_.py  777e3fbdf27c_.py  fb1bc96b4854_user_model.py
bigvoto/app/controllers/: poll_controller.py  user_controller.py
bigvoto/app/infra/models/: models.py
bigvoto/app/infra/sqlalchemy/: database.py
bigvoto/app/routes/: user_router.py
bigvoto/app/schemas/: schemas.py
bigvoto/app/security/: auth.py
bigvoto/app/services/: email_service.py  poll_service.py  queue_sender.py  user_service.py  verify_polls.py
bigvoto/app/settings/: settings.py
bigvotoFrontend/: package.json
bigvotoFrontend/src/: App.js
bigvotoFrontend/src/pages/home/: index.js  style.css
bigvotoFrontend/src/pages/home/components/: Header.js
bigvotofrontend/: package-lock.json  package.json
bigvotofrontend/src/pages/Home/: index.js  style.css
voteService/: .envExemple  Dockerfile  go.mod  go.sum  main.go
voteService/envs/: getEnvs.go
voteService/myerrors/: myerrors.go
voteService/pollservice/: poll.go
voteService/rabbitmq/: rabbitmq.go
voteService/vote/: vote.go
